<?xml version="1.0"?>
<package format="2">
  <name>hdf5_map_io</name>
  <version>1.1.0</version>
  <description>The hdf5_map_io package</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD-3</license>
  <url type="website">http://wiki.ros.org/ros_mesh_tools/hdf5_map_io</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>lvr2</depend>

</package>
