<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>label_manager</name>
  <version>2.0.0</version>
  <description>Serving and persisting label information</description>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>
  <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
  <maintainer email="sebastian.puetz@naturerobots.com">Sebastian Pütz</maintainer>

  <url type="website">http://wiki.ros.org/ros_mesh_tools/label_manager</url>

  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="jvogtherr@uos.de">Jan Philipp Vogtherr</author>

  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>mesh_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>


  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
