<?xml version="1.0"?>
<package>
  <name>mesh_msgs</name>
  <version>1.1.0</version>
  <description>Various Message Types for Mesh Data.</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="hdeeken@uos.de">Henning Deeken</author>
  <author email="jvogtherr@uos.de">Jan Philipp Vogtherr</author>
  <author email="rdiederichse@uos.de">Rasmus Diederichsen</author>
  <author email="cswan@uos.de">Christian Swan</author>

  <url type="website">http://wiki.ros.org/mesh_tools/mesh_msgs</url>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
