<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mesh_msgs_conversions</name>
  <version>2.1.1</version>
  <description>converts point clouds and attributes into meshes and mesh attributes</description>

  <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>

  <license>BSD 3-Clause</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="hdeeken@uos.de">Henning Deeken</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>lvr2</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>mesh_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
