<?xml version="1.0"?>
<package>
  <name>mesh_msgs_hdf5</name>
  <version>1.1.0</version>
  <description>Read mesh_msgs from hdf5</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <url type="website">http://wiki.ros.org/ros_mesh_tools/mesh_msgs_hdf5</url>
  <license>BSD-3</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <build_depend>mesh_msgs</build_depend>
  <build_depend>hdf5_map_io</build_depend>
  <build_depend>label_manager</build_depend>

  <run_depend>mesh_msgs</run_depend>
  <run_depend>hdf5_map_io</run_depend>
  <run_depend>label_manager</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
