<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mesh_msgs_transform</name>
  <version>2.1.1</version>
  <description>Methods to transform mesh_msgs</description>
  <license>BSD-3</license>
  <url type="website">http://wiki.ros.org/ros_mesh_tools/mesh_msgs_transform</url>
  <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>mesh_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
