<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mesh_tools</name>
  <version>2.0.0</version>
  <description>The mesh_tools package</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD-3</license>
  <url type="website">http://wiki.ros.org/mesh_tools</url>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>
  <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
  <maintainer email="sebastian.puetz@naturerobots.com">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mesh_msgs</exec_depend>
  <exec_depend>mesh_msgs_transform</exec_depend>
  <exec_depend>mesh_msgs_conversions</exec_depend>
  <exec_depend>rviz_mesh_tools_plugins</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
