<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mesh_tools</name>
  <version>2.1.1</version>
  <description>The mesh_tools package</description>
  <license>BSD-3</license>
  <url type="website">http://wiki.ros.org/mesh_tools</url>
  <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mesh_msgs</exec_depend>
  <exec_depend>mesh_msgs_transform</exec_depend>
  <exec_depend>mesh_msgs_conversions</exec_depend>
  <exec_depend>rviz_mesh_tools_plugins</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
