<?xml version="1.0"?>
<package format="2">
  <name>ros_mesh_tools</name>
  <version>0.0.0</version>
  <description>The ros_mesh_tools package</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>3-Clause BSD</license>
  <url type="website">http://wiki.ros.org/ros_mesh_tools</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <exec_depend>hdf5_map_io</exec_depend>
  <exec_depend>mesh_msgs</exec_depend>
  <exec_depend>mesh_msgs_transform</exec_depend>
  <exec_depend>rviz_map_plugin</exec_depend>
  <exec_depend>rviz_mesh_plugin</exec_depend>
  <exec_depend>label_manager</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
